--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -13,6 +13,10 @@
 .text__container > span {
   color: #f00946;
   margin-left: 4px;
+  font-size: 1rem;
+  line-height: 16px;
+  font-weight: 700;
+  letter-spacing: 1.4px;
 }
 
 .main__heading,
