--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -31,14 +31,14 @@
 }
 
 .home__portfolio-text-wrapper {
-  max-width: 540px;
+  max-width: 550px;
   padding-top: 0;
   padding-bottom: 60px;
 }
 
 .top-line {
   color: #f00946;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 16px;
   font-weight: 700;
   letter-spacing: 1.4px;
@@ -48,7 +48,7 @@
 
 .heading {
   margin-bottom: 24px;
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 1.1;
   font-weight: 600;
   color: #f7f8fa;
@@ -64,7 +64,7 @@
 
 .home__portfolio-subtitle {
   margin-bottom: 35px;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 24px;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .home__portfolio-img-wrapper {
-  max-width: 555px;
+  max-width: 550px;
   max-height: 340px;
   overflow: hidden;
   text-align: center;
@@ -86,22 +86,34 @@
 .home__portfolio-img {
   margin-top: 0;
   margin-right: 0;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   padding-right: 0;
 }
 
 img {
   border: 0;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 80%;
+  /* max-height: 100%; */
   vertical-align: middle;
   display: inline-block;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 960px) {
   .container {
     padding-right: 30px;
     padding-left: 30px;
+  }
+
+  .top-line {
+    font-size: 0.5rem;
+  }
+
+  .heading {
+    font-size: 2rem;
+  }
+
+  .home__portfolio-subtitle {
+    font-size: 1rem;
   }
 }
 
@@ -113,5 +125,20 @@ img {
   .col {
     max-width: 100%;
     flex-basis: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .protfolio__btn {
+    display: block;
+    transform: scale(0.8);
+  }
+
+  .protfolio__btn > li {
+    text-align: center;
+  }
+
+  .protfolio__btn > li:first-child {
+    margin: 0 0 5px 0;
   }
 }
