--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -26,19 +26,21 @@
 
 .main__heading {
   font-size: 5rem;
+  font-family: "NEXON Lv2 Gothic Bold";
 }
 
 .main__p {
+  margin-top: 20px;
   font-size: 1.25rem;
 }
 
 .icon__container {
   text-align: center;
-  margin: 100px 0;
+  margin: 50px 0;
 }
 
 .icon__container > a:nth-child(2) {
-  margin: 0 90px;
+  margin: 0 50px;
 }
 
 @media screen and (max-width: 960px) {
@@ -55,7 +57,7 @@
     font-size: 1rem;
   }
 
-  .icon__container > a:nth-child(2) {
-    margin: 0 50px;
+  .icon__container {
+    transform: scale(0.8);
   }
 }
