--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,6 +1,6 @@
 .home__portfolio-section {
   color: #fff;
-  height: 100vh;
+  height: calc(100vh - 80px);
   padding: 160px 0;
   display: flex;
   align-items: center;
@@ -50,8 +50,8 @@
   margin-bottom: 24px;
   font-size: 3rem;
   line-height: 1.1;
-  font-weight: 600;
   color: #f7f8fa;
+  font-family: "NEXON Lv2 Gothic Bold";
 }
 
 .dark {
@@ -90,7 +90,7 @@
   padding-right: 0;
 }
 
-img {
+.home__portfolio-img-wrapper > img {
   border: 0;
   max-width: 80%;
   /* max-height: 100%; */
