--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -92,7 +92,7 @@
 
 .home__portfolio-img-wrapper > img {
   border: 0;
-  max-width: 80%;
+  width: 80%;
   /* max-height: 100%; */
   vertical-align: middle;
   display: inline-block;
