자기 소개 변경, 시멘틱 태그로 부여

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -33,8 +33,9 @@
   line-height: 24px;
 }
 
-.about__text__container span {
+.about__text__container em {
   font-family: "NEXON Lv2 Gothic Bold";
+  font-style: normal;
 }
 
 @media screen and (max-width: 768px) {
