피드백 반영, 강조하고 싶지만 메뉴가 선택되었다고 혼동이 될 수 있는 매뉴를 하단으로 내림

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -109,6 +109,11 @@
     z-index: 1;
   }
 
+  .nav-menu > .nav_btn {
+    position: absolute;
+    bottom: 0;
+  }
+
   .nav-links {
     text-align: center;
     padding: 2rem;
